Working on a mobile version first

--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,66 @@
-@import url(./normalize.css);
 
 html {
   background-color: rgba(6,12,6,255)
 }
 
-.container {
-  width: 300px;
-  display: flex;
-  gap: 30px;
+body{
+  font-family: "Sofia", sans-serif;
 }
 
-.salmon img {
+.container{
   width: 300px;
 }
 
-.salmon {
+header{
   position: relative;
+}
+
+img {
+  width: 300px;
 }
 
 .logo-text{
   position: absolute;
   top: 8px;
-  right: 8px;
   color: white;
   font-size: 100px;
   text-align: right;
-  line-height: 85px;
+  line-height: 90px;
 }
 
 .small-logo-text{
   font-size: 93px
 }
 
-.image-credit{
-  position: relative;
-  font-size: small;
+.credit{
+  font-family: sans-serif;
   text-align: right;
+  font-size: small;
   color: grey;
 }
 
-.right-credit > a{
+.credit > a{
   color: white;
 }
 
-.right-credit > a:visited{
+.credit > a:visited{
   color: grey;
-}
-
-.my-form {
-  max-width: 600px;
-  height: auto;
 }
 
 input{
   padding: 0.2rem 1rem;
   font-size: 1.2rem;
-  width: 210px
+  width: 15rem;
 }
 
-.form-boxes{
+/* .form-box{
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-}
-
-button {
-  width: 220px;
-  margin-top: 20px;
-  background-color: green;
-  color: white;
-  border-radius: 5px;
-}
+} */
 
 .title {
+  font-size: 35px;
   color: white;
+  text-align: center;
 }
