--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
-
-
 html {
   background-color: rgba(6,12,6,255)
 }
 
 body{
   font-family: "Sofia", sans-serif;
+}
+
+.main{
+  display: flex;
+  justify-content: center;
 }
 
 .container{
@@ -68,14 +71,26 @@ input{
   text-align: center;
 }
 
-/* .sign-up-form {
-  margin: calc((300px - 18rem)/2)
-} */
-
 .form-box{
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+button{
+  all: unset;
+  color: white;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  border: 2px white solid;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+button:hover{
+  background-color: rgba(210,67,0,255);
 }
 
 /* .form-row{
@@ -90,6 +105,9 @@ input{
     justify-content: center;
     align-items: normal;
     margin-top: 10%;
+    border: 5px rgba(210,67,0,255) solid;
+    border-radius: 5px;
+    padding: 30px;
   }
   .logo-text{
     text-align: right;
